; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/extr_carthw.c_carthw_ssf2_startup.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/extr_carthw.c_carthw_ssf2_startup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EL_STATUS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"SSF2 mapper startup\00", align 1
@ssf2_banks = common dso_local global i32* null, align 8
@carthw_ssf2_mem_setup = common dso_local global i32 0, align 4
@PicoCartMemSetup = common dso_local global i32 0, align 4
@carthw_ssf2_statef = common dso_local global i32 0, align 4
@PicoLoadStateHook = common dso_local global i32 0, align 4
@carthw_ssf2_state = common dso_local global i32 0, align 4
@carthw_chunks = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @carthw_ssf2_startup() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @EL_STATUS, align 4
  %3 = call i32 @elprintf(i32 %2, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %4

4:                                                ; preds = %13, %0
  %5 = load i32, i32* %1, align 4
  %6 = icmp slt i32 %5, 8
  br i1 %6, label %7, label %16

7:                                                ; preds = %4
  %8 = load i32, i32* %1, align 4
  %9 = load i32*, i32** @ssf2_banks, align 8
  %10 = load i32, i32* %1, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  store i32 %8, i32* %12, align 4
  br label %13

13:                                               ; preds = %7
  %14 = load i32, i32* %1, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %1, align 4
  br label %4

16:                                               ; preds = %4
  %17 = load i32, i32* @carthw_ssf2_mem_setup, align 4
  store i32 %17, i32* @PicoCartMemSetup, align 4
  %18 = load i32, i32* @carthw_ssf2_statef, align 4
  store i32 %18, i32* @PicoLoadStateHook, align 4
  %19 = load i32, i32* @carthw_ssf2_state, align 4
  store i32 %19, i32* @carthw_chunks, align 4
  ret void
}

declare dso_local i32 @elprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
